--- a/Assignments/.classpath
+++ b/Assignments/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Chapter_9"/>
 	<classpathentry kind="src" path="Assignment_4"/>
+	<classpathentry kind="src" path="Chapter 10"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
