--- a/Assignments/.classpath
+++ b/Assignments/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="Chapter_9"/>
 	<classpathentry kind="src" path="Assignment_4"/>
 	<classpathentry kind="src" path="Chapter 10"/>
+	<classpathentry kind="src" path="Chapter_12"/>
+	<classpathentry kind="src" path="Chapter_13"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
